<resources>
    <string name="app_name">ListOfTheDay</string>
    <string name="add_new_note">Add new Note</string>
    <string name="add_note">Новая заметка</string>
    <string name="radio_button_1">Высокий</string>
    <string name="radio_button_2">Средний</string>
    <string name="radio_button_3">Низкий</string>
    <string name="hint_note_description">Описание заметки:</string>
    <string name="hint_note_title">Название заметки:</string>
    <string name="text_view_priority_note">Приоритет заметки:</string>
    <string name="toast_alert_not_all_strings_set">Все поля должны быть заполнены</string>

    <string-array name="spinner_day_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>