<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="@string/hint_note_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddNote" />

    <EditText
        android:id="@+id/editTextNoteDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_note_description"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:scrollHorizontally="false"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteTitle" />


    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotePriority">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:checked="true"
            android:text="@string/radio_button_1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/radio_button_2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:checked="true"
            android:text="@string/radio_button_3" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewNotePriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_priority_note"
        android:textColor="#68000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDayOfWeek" />

    <Spinner
        android:id="@+id/spinnerDayOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_day_of_week"
        android:scrollbarSize="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNoteDescription" />

    <TextView
        android:id="@+id/textViewAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/add_note"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionAddNote2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:contentDescription="@string/add_new_note"
        android:cropToPadding="false"
        android:focusable="true"
        android:foregroundGravity="center"
        android:onClick="onClickAddNote"

        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/checkbox_on_background"

        app:useCompatPadding="true" />

</androidx.constraintlayout.widget.ConstraintLayout>